--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ section .title::after{
 /* home section styling */
 .home{
     display: flex;
-    background: url("images/darjeeling.jpg") no-repeat center;
+    background: url("https://github.com/samir5188/3rd/blob/main/Images/darjeeling.jpg?raw=true") no-repeat center;
     height: 100vh;
     color: #fff;
     min-height: 300px;
